crates/ty_python_semantic/resources/mdtest/snapshots/paramspec.md_-_PEP_695_`ParamSpec`_-_Validating_`ParamSpe…_(327594c6dacd8ad).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: paramspec.md - PEP 695 `ParamSpec` - Validating `ParamSpec` usage
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/pep695/paramspec.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, Final, ParamSpec, Callable, Concatenate
 2 | 
 3 | def valid[**P](
 4 |     a1: Callable[P, int],
 5 |     a2: Callable[Concatenate[int, P], int],
 6 | ) -> None: ...
 7 | def invalid[**P](
 8 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
 9 |     a1: P,
10 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
11 |     a2: list[P],
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a3: Callable[[P], int],
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a4: Callable[..., P],
16 |     # TODO: error
17 |     a5: Callable[Concatenate[P, ...], int],
18 | ) -> None: ...
19 | 
20 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 | def invalid_return[**P]() -> P:
22 |     raise NotImplementedError
23 | 
24 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
25 | type Alias[**P] = P
26 | 
27 | def invalid_variable_annotation[**P](y: Any) -> None:
28 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
29 |     x: P = y
30 | 
31 | def invalid_with_qualifier[**P](y: Any) -> None:
32 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
33 |     x: Final[P] = y
34 | 
35 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 | def invalid_stringified_return[**P]() -> "P":
37 |     raise NotImplementedError
38 | 
39 | def invalid_stringified_annotation[**P](
40 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
41 |     a: "P",
42 | ) -> None: ...
43 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
44 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
45 |     x: "P" = y
```

# Diagnostics

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:9:9
   |
 7 | def invalid[**P](
 8 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
 9 |     a1: P,
   |         ^
10 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
11 |     a2: list[P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:11:14
   |
 9 |     a1: P,
10 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
11 |     a2: list[P],
   |              ^
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a3: Callable[[P], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:13:19
   |
11 |     a2: list[P],
12 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
13 |     a3: Callable[[P], int],
   |                   ^
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a4: Callable[..., P],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:15:23
   |
13 |     a3: Callable[[P], int],
14 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
15 |     a4: Callable[..., P],
   |                       ^
16 |     # TODO: error
17 |     a5: Callable[Concatenate[P, ...], int],
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:21:30
   |
20 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
21 | def invalid_return[**P]() -> P:
   |                              ^
22 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:25:19
   |
24 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
25 | type Alias[**P] = P
   |                   ^
26 |
27 | def invalid_variable_annotation[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:29:8
   |
27 | def invalid_variable_annotation[**P](y: Any) -> None:
28 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
29 |     x: P = y
   |        ^
30 |
31 | def invalid_with_qualifier[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:33:8
   |
31 | def invalid_with_qualifier[**P](y: Any) -> None:
32 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
33 |     x: Final[P] = y
   |        ^^^^^^^^
34 |
35 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:36:42
   |
35 | # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
36 | def invalid_stringified_return[**P]() -> "P":
   |                                          ^^^
37 |     raise NotImplementedError
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:41:8
   |
39 | def invalid_stringified_annotation[**P](
40 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
41 |     a: "P",
   |        ^^^
42 | ) -> None: ...
43 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bare ParamSpec `P` is not valid in this context
  --> src/mdtest_snippet.py:45:8
   |
43 | def invalid_stringified_variable_annotation[**P](y: Any) -> None:
44 |     # error: [invalid-type-form] "Bare ParamSpec `P` is not valid in this context"
45 |     x: "P" = y
   |        ^^^
   |
info: A bare ParamSpec is only valid:
info:  - as the first argument to `Callable`
info:  - as the last argument to `Concatenate`
info:  - as part of a type parameter list when defining a generic class
info:  - or as part of an argument list when specializing a generic class
info: rule `invalid-type-form` is enabled by default

```
